# TsaoSciComputation

./: .adapter-probe-metadata-trigger  .audit-v301-release  .audit-v301-release-r2  .canonical-verification-trigger  .deepen-maintenance  .export-trigger  .final-ci-audit-trigger  .final-ci-status.json  .final-diagnosis-trigger  .final-fast-trigger  .final-generated-path-audit-trigger  .final-hardening-status.json  .final-hardening-trigger  .final-main-audit-trigger  .final-parallel-trigger  .final-python-compatibility-trigger  .final-readme-audit-trigger  .final-repair-trigger  .finalize-v301  .finalize-v301-r4  .finalize-v302-confidence  .force-single-main-trigger  .generated-path-audit-status.json  .gitignore  .hardening-core-status.json  .hardening-core-trigger  .hardening-diagnose-status.json  .hardening-diagnose-trigger  .hardening-quality-status.json  .hardening-quality-trigger  .hardening-test-output.txt  .hardening-test-trigger  .inventory-trigger  .main-workflows-inventory.tsv  .python310-compatibility-trigger  .python310-compatibility-trigger-v2  .python310-compatibility-trigger-v3  .requirements-audit-trigger  .requirements-generation-status.json  .requirements-generation-trigger  (+26 more)
.audit_patch_v102/: part-000  part-001  part-002  part-003  part-004  part-005  part-006
.audit_source_v101/: part-000  part-001  part-002  part-003  part-004  part-005  part-006  part-007  part-008  part-009  part-010  part-011  part-012  part-013
.bootstrap/: bundle.part-000.b85  chunk-00  chunk-01  chunk-02  chunk-03  chunk-04  chunk-05  manifest.json  part-000  part-001  part-002  part-003  probe  source.part-000  source.part-001  source.part-002  source.part-003  source.part-004  source.part-005  source.part-006
.bootstrap_hex/: part-00  part-01  part-02  part-03  part-04  part-05  part-06  part-07  part-08  part-09  part-10  part-11
.final_source/: finalizer-000  finalizer-000a  finalizer-000b  finalizer-001  finalizer-002  finalizer-003  finalizer-004  finalizer-005a  finalizer-005b  finalizer-006  finalizer.py  loader-000  loader-001  loader-002  manifest.json  part-000  part-001  part-002  part-003  part-004  part-005  part-006  tsao-source.tar.xz
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.release_source/: part-000  part-001  part-002  part-003  part-004  part-005  part-006  part-007  part-008  part-009  part-010  part-011  part-012  part-013  part-014  part-015
.single-main-bootstrap/: part-000  part-002  part-003  part-004  part-005  part-006  part-007  part-008  part-009  part-010  part-011  part-012  part-013
benchmarks/: latest.json
capability-index/: README.md  graph.json
docs/: adapter-certification.md  architecture.md  branch-consolidation-audit.md  branch-policy.md  compatibility.md  coverage-matrix.md  dependency-maintenance.md  performance.md  release.md  repository-ruleset.md  scientific-confidence.md  scientific-trust.md  scientific-validation.md
evidence/: JUNIT_FINAL.xml  JUNIT_REMOTE_FINAL.xml  coverage.json  critical-coverage-policy.json  quality-baseline.json  quality-check.json  scientific-benchmarks.json  security-scan.json
registry/: adapters.json
reports/: .completion-trigger-note  .keep-v302-completion  DEPENDENCY_AUDIT.json  DEPENDENCY_SNAPSHOT.txt  FINAL_DIAGNOSIS.json  FINAL_DIAGNOSIS.md  FINAL_REPAIR_STATUS.json  FINAL_VERIFICATION.json  MAINTENANCE_GOVERNANCE_FAILURE.json  MUTATION_REPORT.json  PLATFORM_SETTINGS.json  RELEASE_AUDIT.json  REMOTE_FINALIZATION.json  REPOSITORY_AUDIT.json  ROUNDTRIP_DIAGNOSIS.json  SCIENTIFIC_GOVERNANCE_FAILURE.json  SECURITY_SCAN.json  V301_FINALIZATION_FAILURE.json  V302_COMPLETION_FAILURE.json  V302_CONFIDENCE_FINALIZATION_FAILURE.json
schemas/: adapter.schema.json  calculation-contract.schema.json  capability.schema.json  confidence-assessment.schema.json  handoff.schema.json  project.schema.json  result.schema.json  workflow.schema.json
(+440 files in other folders)
