[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tsao-scicomputation"
version = "3.0.0"
description = "Evidence-bound, solver-aware, full-scale scientific computation orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SUNHAOJUN22"}]
dependencies = []
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]

[project.optional-dependencies]
validation = ["pytest>=8", "coverage>=7", "jsonschema>=4", "PyYAML>=6"]
quality = ["ruff>=0.12", "mypy>=1.16", "bandit>=1.8", "build>=1.2"]

[project.scripts]
tsao-computation = "tsao_computation.cli:main"

[tool.setuptools]
packages = {find = {include = ["tsao_computation*"]}}
include-package-data = true

[tool.setuptools.package-data]
tsao_computation = ["data/registry/*.json"]

[tool.coverage.run]
branch = true
source = ["tsao_computation"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["tests/"]
