[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "tsao-scicomputation"
dynamic = ["version"]
description = "Evidence-bound, solver-aware, full-scale scientific computation orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "SUNHAOJUN22"}]
keywords = [
  "scientific-computing",
  "multiscale-modeling",
  "computational-chemistry",
  "molecular-simulation",
  "finite-element",
  "process-simulation",
  "reproducibility",
]
dependencies = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/SUNHAOJUN22/TsaoSciComputation"
Issues = "https://github.com/SUNHAOJUN22/TsaoSciComputation/issues"
Changelog = "https://github.com/SUNHAOJUN22/TsaoSciComputation/blob/main/CHANGELOG.md"
Security = "https://github.com/SUNHAOJUN22/TsaoSciComputation/security/policy"

[project.optional-dependencies]
validation = [
  "pytest>=8",
  "coverage>=7",
  "jsonschema>=4",
  "PyYAML>=6",
  "tomli>=2; python_version < '3.11'",
]
quality = [
  "ruff>=0.12",
  "mypy>=1.16",
  "bandit>=1.8",
  "build>=1.2",
  "types-jsonschema>=4.25",
  "setuptools>=80",
  "wheel>=0.45",
]
security = [
  "pip-audit==2.10.0",
]

[project.scripts]
tsao-computation = "tsao_computation.cli:main"

[tool.setuptools]
packages = {find = {include = ["tsao_computation*"]}}
include-package-data = true

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.package-data]
tsao_computation = ["data/registry/*.json", "py.typed"]

[tool.coverage.run]
branch = true
source = ["tsao_computation"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["tests/"]
